--- a/css/goal.css
+++ b/css/goal.css
@@ -84,3 +84,10 @@ img {
   border: 3px solid red;
   margin: 15px;
 }
+
+.card-link {
+  border: 3px solid black;
+  border-radius: 25%;
+  padding: 8px;
+  background-color: aquamarine;
+}
