--- a/Pages/Roadmap/roadmap.css
+++ b/Pages/Roadmap/roadmap.css
@@ -38,6 +38,7 @@ img {
 .cards {
   text-align: center;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   padding: 10px;
   gap: 15px;
