--- a/Pages/Colllection/collection.css
+++ b/Pages/Colllection/collection.css
@@ -16,8 +16,8 @@ a {
 
 img {
   border: 2px solid aliceblue;
-  width: 100px;
-  height: 150px;
+  width: 250px;
+  height: 170px;
 }
 
 /* NavBar */
@@ -41,7 +41,7 @@ img {
   border: 3px solid black;
   padding: 10px;
   margin: 10px;
-  width: 200px;
+  width: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -54,4 +54,8 @@ img {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+}
+
+@media only screen and (max-width: 400px) {
+  
 }
