--- a/Pages/Goals/goal.css
+++ b/Pages/Goals/goal.css
@@ -91,3 +91,20 @@ img {
   padding: 8px;
   background-color: aquamarine;
 }
+
+@media only screen and (max-width: 400px) {
+  
+/* Navbar */
+.nav-list{
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Content */
+.life {
+  flex-direction: column;
+  gap: 10px;
+  margin: 3px;
+}
+}
