--- a/Pages/Tracker/trackers.css
+++ b/Pages/Tracker/trackers.css
@@ -26,6 +26,11 @@ img {
   border: 2px solid black;
 }
 
+p{
+  font-size: 20px;
+  margin: 3px;
+}
+
 .hidden {
   display: none;
 }
@@ -47,15 +52,9 @@ img {
 }
 
 /* Cards */
-.container{
-  border: 3px solid black;
-  background-color: blanchedalmond;
-  height: 250px;
-  margin: 5px;
-  margin-top: 20px;
-}
 
-.manga-container{
+.manga-container,
+.container{
   border: 3px solid black;
   background-color: blanchedalmond;
   height: 300px;
