--- a/Pages/Goals/goal.css
+++ b/Pages/Goals/goal.css
@@ -31,6 +31,10 @@ img {
   height: 100px;
 }
 
+.hidden{
+  display: none;
+}
+
 /* NavBar */
 .navbar {
   background-color: bisque;
@@ -107,4 +111,47 @@ img {
   gap: 10px;
   margin: 3px;
 }
+
+/* Steps */
+.step-btns{
+  display: flex;
+  width: 320px;
+  height: 515px;
+  flex-direction: column;
+  padding: 10px;
+  border: 3px solid black;
+}
+
+.step-back{
+  width: 40px;
+}
+
+/* Content menu */
+.nav-mobile{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+  background-color: aquamarine;
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  top: 593px;
+}
+
+.mobile-list{
+  width: 100%;
+  height: 65px;
+  margin-top: 15px;
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 15px;
+}
+
+.menu-item{
+  border: 2px solid black;
+  padding: 1px;
+}
+
 }
