--- a/Pages/Goals/goal.css
+++ b/Pages/Goals/goal.css
@@ -31,7 +31,7 @@ img {
   height: 100px;
 }
 
-.hidden{
+.hidden {
   display: none;
 }
 
@@ -97,60 +97,64 @@ img {
 }
 
 @media only screen and (max-width: 400px) {
-  
-/* Navbar */
-.nav-list{
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-}
+  /* Navbar */
+  .nav-list {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
 
-/* Content */
-.life {
-  flex-direction: column;
-  gap: 10px;
-  margin: 3px;
-}
+  /* Content */
+  .life {
+    flex-direction: column;
+    gap: 10px;
+    margin: 3px;
+  }
 
-/* Steps */
-.step-btns{
-  display: flex;
-  width: 320px;
-  height: 515px;
-  flex-direction: column;
-  padding: 10px;
-  border: 3px solid black;
-}
+  /* Steps */
+  .step-btns {
+    width: 320px;
+    height: 515px;
+    padding: 10px;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+  }
 
-.step-back{
-  width: 40px;
-}
+  .btn-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 
-/* Content menu */
-.nav-mobile{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: aquamarine;
-  width: 100%;
-  height: 50px;
-  position: fixed;
-  bottom: 0;
-}
+  .step-back {
+    width: 40px;
+  }
 
-.mobile-list{
-  width: 100%;
-  height: 65px;
-  margin-top: 15px;
-  display:flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 15px;
-}
+  /* Content menu */
+  .nav-mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aquamarine;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+  }
 
-.menu-item{
-  border: 2px solid black;
-  padding: 1px;
-}
+  .mobile-list {
+    width: 100%;
+    height: 65px;
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 15px;
+  }
 
+  .menu-item {
+    border: 2px solid black;
+    padding: 1px;
+  }
 }
