--- a/Pages/Goals/goal.css
+++ b/Pages/Goals/goal.css
@@ -26,6 +26,11 @@ main {
   align-items: center;
 }
 
+.icon {
+  width: 40px;
+  height: 35px;
+}
+
 img {
   width: 200px;
   height: 100px;
@@ -154,7 +159,6 @@ img {
   }
 
   .menu-item {
-    border: 2px solid black;
-    padding: 1px;
+    padding: 5px;
   }
 }
