--- a/Pages/Goals/goal.css
+++ b/Pages/Goals/goal.css
@@ -79,12 +79,10 @@ img {
 }
 
 /* Life */
-.life {
-  display: flex;
-}
 
 .container {
   border: 2px solid black;
+  margin-bottom: 10px;
   padding: 5px;
   font-size: 20px;
   background-color: beige;
