--- a/Pages/Roadmap/roadmaps/layout-roadmap.css
+++ b/Pages/Roadmap/roadmaps/layout-roadmap.css
@@ -44,19 +44,25 @@ main {
 }
 
 .vision-text {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 section {
   width: 150px;
   height: 200px;
   padding: 10px;
-  border: 3px solid black;
+  font-weight: 700;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  gap: 15px;
+  gap: 40px;
+}
+
+.box {
+  border: 3px solid black;
+  padding: 10px;
+  width: 350px;
 }
 
 ul {
