--- a/Pages/Roadmap/roadmaps/layout-roadmap.css
+++ b/Pages/Roadmap/roadmaps/layout-roadmap.css
@@ -76,6 +76,7 @@ ul {
     bottom: 0;
     left: 0;
     width: 100%;
+    margin-top: 50px;
     padding: 5px;
     display: flex;
     flex-direction: row;
