--- a/Pages/Roadmap/roadmaps/layout-roadmap.css
+++ b/Pages/Roadmap/roadmaps/layout-roadmap.css
@@ -13,6 +13,11 @@ h1 {
   border-bottom: 2px solid black;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 nav {
   background-color: azure;
   padding: 10px;
@@ -69,6 +74,10 @@ ul {
   list-style: none;
 }
 
+#breakdown {
+  margin-bottom: 560px;
+}
+
 @media only screen and (max-width: 400px) {
   .bottom-nav {
     background-color: aquamarine;
@@ -76,7 +85,6 @@ ul {
     bottom: 0;
     left: 0;
     width: 100%;
-    margin-top: 50px;
     padding: 5px;
     display: flex;
     flex-direction: row;
