--- a/Pages/Roadmap/roadmaps/layout-roadmap.css
+++ b/Pages/Roadmap/roadmaps/layout-roadmap.css
@@ -70,6 +70,15 @@ section {
   width: 350px;
 }
 
+.cards {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 10px;
+  gap: 15px;
+}
+
 ul {
   list-style: none;
 }
